removed flash.jpg and fixed all fonts on mobile version as well

--- a/stylem.css
+++ b/stylem.css
@@ -76,7 +76,7 @@ p.p2 {
   font-weight:700;
 }
 p.p3 {
-  font-family:monofur56;
+  font-family:sans-serif;
   font-size:1.8em;
 }
 p.p4 {
